--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#31c13d</color>
+    <color name="colorPrimaryDark">#0f8618</color>
+    <color name="colorAccent">#131613</color>
+    <color name="colorTextLight">#fff</color>
+
 </resources>
